# cpp-tour-in-ml

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
.devcontainer/: Dockerfile  devcontainer.json
eigen/: NeuralNetwork.cpp  NeuralNetwork.hpp  main.cpp  simple_nn.cpp
httpserver/: CMakeLists.txt  simple_http_server.cpp
label_image/: main.cc
misc/: conv_kernel.py
sin/: bare_metal.cpp  main.cpp
sin/python/pytorch/: Readme.md  pytorch_SinTraining.ipynb  sin_model.onnx  tvm_execute.py
sin/python/tf/: SinTrainig.ipynb  tf_sine_model.tflite  tvm_execute.py
skynet/: CMakeLists.txt  Readme.md  compile.sh  nbody_cuda.cu  nbody_cuda.cuh  nbody_sim.cpp  raylib_sim.cpp  skynet.cpp  websocket.h
skynet/html/: 1-st-try.html  index.html
